Changes
=======

Next
----

New features:

- ``rasterio.open()`` now accepts URLs with GET parameters (#1121).

Bug fixes:

- Pad boundless read VRTs so we don't overflow due to rounding (#1184).
- Boundless reads of WarpedVRTs are enabled by setting an effective crs
  (#1188).
- Raise ValueError when invalid width/height are passed to the
  ``InMemoryRaster`` constructor (#1144, #1194).

1.0a11 (2017-10-30)
-------------------

Breaking changes:

- ``rasterio.copy()`` moved to ``rasterio.shutil.copy() (#1173).
- ``DatasetBase.colorinterp`` is now a setter/getter that operates on
  a sequence of ``ColorInterp.<enum>`` in band order (#1134).

New features:

- Addition of ``rasterio.shutil.delete()`` and ``$ rio rm`` for deleting
  datasets (#929).
- Addition of ``rasterio.shutil.exists()`` for determining if a dataset
  exists (#1173).
- Addition of ``rasterio.shutil.copyfiles()`` to copy files associated
  with a datset from one location to another (#1173).
- Allow setting band color interpretation in a ``set_colorinterp()`` method
  and in ``$ rio edit-info --colorinterp`` (#1133).

Bug fixes:

- Reprojection of numpy arrays using GCPs has never worked due to faulty code,
  but has been fixed (#1166, #1171).
- A circular import situation has been resolved by moving dataset mixin classes
  from ``rasterio.io`` to ``rasterio.windows`` and ``rasterio.transform``
  (#1174, #1173).
- Prevent a segmentation fault in ``rasterio.features.rasterize()`` by guarding
  against unsupported GeoJSON input (#1172, #1176).

1.0a10 (2017-10-09)
-------------------

Breaking changes:

- In the GeoJSON output of rio-blocks, the windows are now JSON
  representations of the ``Window`` class (#1074).
- The ``rasterio.windows.Window`` class no longer derives from ``tuple``.
  Comparisons like ``Window(0, 0, 1, 1) == ((0, 1), (0, 1))`` are no
  longer possible. Instead, call the ``.toranges()`` method of the 
  former or coerce the latter using ``Window.from_ranges`` (#1074).