@@ -125,6 +125,13 @@ cdef class DatasetBase(object):
             path_b = vsi_path(*parse_path(path)).encode('utf-8')
             path_c = path_b
 
+            # driver may be a string or list of strings. If the
+            # former, we put it into a list.
+            if isinstance(driver, string_types):
+                driver = [driver]
+
+            # Construct a null terminated C list of driver
+            # names for GDALOpenEx.
             for name in (driver or []):
                 name_b = name.encode('utf-8')
                 name_c = name_b
@@ -137,7 +144,7 @@ cdef class DatasetBase(object):
                 val_c = val_b
                 options = CSLAddNameValue(options, key_c, val_c)
 
-            # Read-only + Raster + Sharing
+            # GDALOpenEx flags: Read-only + Raster + Sharing + Errors
             flags = 0x00 | 0x02 | 0x20 | 0x40
 
             try:
